--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Training Brain: Nörolog Destekli Zihin ve Beyin Egzersizleri</title>
+    <meta name="description" content="Nöroloji doktoru rehberliğinde hazırlanan ücretsiz zihin egzersizleri ile hafıza, dikkat ve problem çözme becerilerinizi geliştirin. Bilimsel temelli oyunlarla beyninizi formda tutun.">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
