--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Training Brain: Nörolog Destekli Zihin ve Beyin Egzersizleri</title>
     <meta name="description" content="Nöroloji doktoru rehberliğinde hazırlanan ücretsiz zihin egzersizleri ile hafıza, dikkat ve problem çözme becerilerinizi geliştirin. Bilimsel temelli oyunlarla beyninizi formda tutun.">
+    <meta name="google-site-verification" content="eCGhtdjzY5Z_Pu4wT-AtiYRSHsRGs5rxQIBwGq5QGKU" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
