--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Blog sayfasına özel başlık ve açıklama -->
+    <title>Blog - Nörolog Gözünden Zihin Sağlığı | DEEP BRAİN</title>
+    <meta name="description" content="Beyin sağlığı, hafıza, dikkat ve öğrenme üzerine nöroloji doktoru tarafından yazılmış makaleler ve bilimsel ipuçları.">
+    
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
 
+    <!-- Sitemizin her sayfasında aynı olan başlık bölümü -->
+    <header>
+        <h1>DEEP BRAİN</h1>
+        <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
+    </header>
+
+    <main>
+        <div class="page-container">
+            <h2>Makaleler ve Yazılar</h2>
+            <p class="page-intro">Beyin sağlığınızı korumak ve bilişsel yeteneklerinizi geliştirmek için hazırladığım yazılara buradan ulaşabilirsiniz.</p>
+
+            <div class="article-list">
+                <!-- ÖRNEK 1. MAKALE BAŞLANGICI -->
+                <article class="article-preview">
+                    <h3><a href="makale-hafiza-nasil-guclenir.html">Unutkanlığa Karşı Hafızanızı Güçlendirmenin 5 Bilimsel Yolu</a></h3>
+                    <p class="article-meta">Yayınlanma Tarihi: 15 Ekim 2023</p>
+                    <p class="article-excerpt">Günlük hayatta sıkça yaşadığımız unutkanlık aslında yönetilebilir bir durumdur. Bu yazıda, nörobilimin ışığında hafızanızı daha keskin hale getirecek, uygulaması kolay 5 yöntemi inceliyoruz...</p>
+                    <a href="makale-hafiza-nasil-guclenir.html" class="read-more">Devamını Oku →</a>
+                </article>
+                <!-- ÖRNEK 1. MAKALE BİTİŞİ -->
+
+                <!-- GELECEKTEKİ MAKALELER İÇİN ÖRNEK YAPI -->
+                <article class="article-preview">
+                    <h3><a href="#">Stroop Testi'nin Arkasındaki Bilim: Beynimiz Çelişkilerle Nasıl Başa Çıkar?</a></h3>
+                    <p class="article-meta">Yayınlanma Tarihi: Henüz yayınlanmadı</p>
+                    <p class="article-excerpt">Neden renkli kelimeleri okumakta zorlanırız? Stroop etkisinin nörolojik temellerini ve bu basit testin dikkat kontrolümüz hakkında neler söylediğini keşfedin...</p>
+                    <a href="#" class="read-more">Devamını Oku →</a>
+                </article>
+            </div>
+            
+            <a href="index.html" class="back-to-home-link">Ana Sayfaya Dön</a>
+        </div>
+    </main>
+
+    <!-- Sitemizin her sayfasında aynı olan alt bilgi bölümü -->
+    <footer>
+        <p>© 2023 - Deep Brain. Tüm hakları saklıdır.</p>
+    </footer>
+
+</body>
+</html>
