--- a/makale-hafiza-nasil-guclenir.html
+++ b/makale-hafiza-nasil-guclenir.html
@@ -29,7 +29,7 @@
             <article class="full-article">
                 <!-- MAKALENİN ANA BAŞLIĞI -->
                 <h1>Unutkanlığa Karşı Hafızanızı Güçlendirmenin 5 Bilimsel Yolu</h1>
-                <p class="article-meta">Yazar: Abdulkadir Ermiş - Yayınlanma Tarihi: 10 Haziran 2025</p>
+                <p class="article-meta">Yazar: Uzm. Dr. Abdulkadir Ermiş - Yayınlanma Tarihi: 10 Haziran 2025</p>
 
                 <!-- GİRİŞ PARAGRAFI: Okuyucunun dikkatini çekin. -->
                 <p>Anahtarları nereye koyduğunuzu unutmak ya da yeni tanıştığınız birinin ismini hatırlayamamak... Bu tür küçük unutkanlıklar hepimizin başına gelir. Peki, bu durumun önüne geçmek ve hafızamızı bir kas gibi güçlendirmek mümkün mü? Bir nöroloji uzmanı olarak cevabım kesinlikle evet. Bu yazıda, bilimin ışığında etkinliği kanıtlanmış 5 pratik yöntemi sizlerle paylaşacağım.</p>
