--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Training Brain: Nörolog Destekli Zihin ve Beyin Egzersizleri</title>
+    <!-- Favicon Linkleri -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="description" content="Nöroloji doktoru rehberliğinde hazırlanan ücretsiz zihin egzersizleri ile hafıza, dikkat ve problem çözme becerilerinizi geliştirin. Bilimsel temelli oyunlarla beyninizi formda tutun.">
     <meta name="google-site-verification" content="eCGhtdjzY5Z_Pu4wT-AtiYRSHsRGs5rxQIBwGq5QGKU" />
     <link rel="stylesheet" href="style.css">
