--- a/makale-hafiza-nasil-guclenir.html
+++ b/makale-hafiza-nasil-guclenir.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bu makaleye özel başlık ve açıklama (SEO için çok önemli) -->
     <title>Hafızanızı Güçlendirmenin 5 Bilimsel Yolu | DEEP BRAİN Blog</title>
+    <!-- Favicon Linkleri -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="description" content="Nörolog gözüyle unutkanlığa karşı etkili ve bilimsel olarak kanıtlanmış 5 hafıza güçlendirme tekniğini öğrenin. Beyin sağlığınızı bugün iyileştirin.">
     
     <link rel="stylesheet" href="style.css">
