--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <nav class="main-nav">
         <a href="index.html">Ana Sayfa</a>
         <a href="blog.html">Blog</a>
+        <a href="hakkimda.html">Hakkımda</a>
     </nav>
     </header>
 
