--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,11 @@
     <header>
         <h1>DEEP BRAİN</h1>
         <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
+        <nav class="main-nav">
+            <a href="index.html">Ana Sayfa</a>
+            <a href="blog.html">Blog</a>
+            <a href="hakkimda.html">Hakkımda</a>
+        </nav>
     </header>
 
     <main>
