--- a/blog.html
+++ b/blog.html
@@ -47,8 +47,8 @@
 
                 <!-- GELECEKTEKİ MAKALELER İÇİN ÖRNEK YAPI -->
                 <article class="article-preview">
-                    <h3><a href="#">Stroop Testi'nin Arkasındaki Bilim: Beynimiz Çelişkilerle Nasıl Başa Çıkar?</a></h3>
-                    <p class="article-meta">Yayınlanma Tarihi: Henüz yayınlanmadı</p>
+                    <h3><a href="stroop-testi-bilimi.html">Stroop Testi'nin Arkasındaki Bilim: Beynimiz Çelişkilerle Nasıl Başa Çıkar?</a></h3>
+                    <p class="article-meta">Yayınlanma Tarihi: 30.06.2025</p>
                     <p class="article-excerpt">Neden renkli kelimeleri okumakta zorlanırız? Stroop etkisinin nörolojik temellerini ve bu basit testin dikkat kontrolümüz hakkında neler söylediğini keşfedin...</p>
                     <a href="#" class="read-more">Devamını Oku →</a>
                 </article>
