--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <button class="game-choice" data-game="adam-asmaca">Adam Asmaca (Dil Becerisi)</button>
                 <button class="game-choice" data-game="sirali-hatirlama">Sıralı Hatırlama (Hafıza)</button>
                 <button class="game-choice" data-game="stroop-testi">Stroop Testi (Dikkat)</button>
+                <button class="game-choice" data-game="wcst">Wisconsin Kart Eşleştirme (Yürütücü İşlevler)</button>
             </div>
         </div>
 
