--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <button class="game-choice" data-game="sirali-hatirlama">Sıralı Hatırlama (Hafıza)</button>
                 <button class="game-choice" data-game="stroop-testi">Stroop Testi (Dikkat)</button>
                 <button class="game-choice" data-game="wcst">Wisconsin Kart Eşleştirme Egzersizi(Yürütücü İşlevler)</button>
+                <button class="game-choice" data-game="n-back">N-Back Testi (Çalışma Belleği)</button>
             </div>
         </div>
 
