--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Training Brain: Nörolog Destekli Zihin ve Beyin Egzersizleri</title>
+    <title>DEEP BRAİN: Nörolog Destekli Zihin ve Beyin Egzersizleri</title>
+    <meta name="description" content="Nöroloji doktoru rehberliğinde hazırlanan ücretsiz zihin egzersizleri ile hafıza, dikkat ve problem çözme becerilerinizi geliştirin. Bilimsel temelli oyunlarla beyninizi formda tutun.">
+    
     <!-- Favicon Linkleri -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <meta name="description" content="Nöroloji doktoru rehberliğinde hazırlanan ücretsiz zihin egzersizleri ile hafıza, dikkat ve problem çözme becerilerinizi geliştirin. Bilimsel temelli oyunlarla beyninizi formda tutun.">
-    <meta name="google-site-verification" content="eCGhtdjzY5Z_Pu4wT-AtiYRSHsRGs5rxQIBwGq5QGKU" />
+
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,42 +20,37 @@
 <body>
 
     <header>
-    <h1>DEEP BRAİN</h1>
-    <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
-    <!-- YENİ EKLENEN NAVİGASYON MENÜSÜ -->
-    <nav class="main-nav">
-        <a href="index.html">Ana Sayfa</a>
-        <a href="blog.html">Blog</a>
-        <a href="hakkimda.html">Hakkımda</a>
-    </nav>
+        <h1>DEEP BRAİN</h1>
+        <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
+        <nav class="main-nav">
+            <a href="index.html">Ana Sayfa</a>
+            <a href="blog.html">Blog</a>
+            <a href="hakkimda.html">Hakkımda</a>
+        </nav>
     </header>
 
     <main>
-        <!-- Bu bölüm başlangıçta gösterilecek -->
         <div id="selection-screen">
             <h2>Hangi Becerinizi Geliştirmek İstersiniz?</h2>
             <div class="game-selection-container">
                 <button class="game-choice" data-game="adam-asmaca">Adam Asmaca (Dil Becerisi)</button>
                 <button class="game-choice" data-game="sirali-hatirlama">Sıralı Hatırlama (Hafıza)</button>
                 <button class="game-choice" data-game="stroop-testi">Stroop Testi (Dikkat)</button>
-                <button class="game-choice" data-game="wcst">Wisconsin Kart Eşleştirme Egzersizi(Yürütücü İşlevler)</button>
+                <button class="game-choice" data-game="wcst">Wisconsin Kart Eşleştirme Egzersizi</button>
                 <button class="game-choice" data-game="n-back">N-Back Testi (Çalışma Belleği)</button>
             </div>
         </div>
 
-        <!-- Bu bölüm oyun seçildiğinde gösterilecek -->
         <div id="game-container" class="hidden">
-            <!-- Oyun içeriği JavaScript tarafından bu div'in içine eklenecek -->
             <div id="game-content">
-                <!-- Oyunlar buraya yüklenir -->
+                <!-- Oyun içeriği buraya JavaScript ile eklenecek -->
             </div>
-            
             <button id="back-to-menu">Ana Menüye Dön</button>
         </div>
     </main>
 
     <footer>
-        <p>© 2023 - Deep Brain. Tüm hakları saklıdır.</p>
+        <p>© 2024 - Deep Brain. Tüm hakları saklıdır.</p>
     </footer>
 
     <script src="script.js"></script>
