--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,14 @@
             <p class="page-intro">Beyin sağlığınızı korumak ve bilişsel yeteneklerinizi geliştirmek için hazırladığım yazılara buradan ulaşabilirsiniz.</p>
 
             <div class="article-list">
+                <!-- YENİ BESLENME MAKALESİ BAŞLANGICI -->
+                <article class="article-preview">
+                    <h3><a href="beslenme-bilissel-etkiler.html">Beyin Gücünüzü Artırın: Beslenmenin Bilişsel Fonksiyonlara Etkisi</a></h3>
+                    <p class="article-meta">Yayınlanma Tarihi: [Makaleyi yazdığınız tarihi ekleyin]</p>
+                    <p class="article-excerpt">Tükettiğimiz besinlerin hafıza, dikkat ve öğrenme gibi bilişsel fonksiyonlarımız üzerinde doğrudan bir etkiye sahip olduğunu biliyor muydunuz? Beyninizi en iyi şekilde beslemenin bilimsel yollarını keşfedin.</p>
+                    <a href="beslenme-bilissel-etkiler.html" class="read-more">Devamını Oku →</a>
+                </article>
+                <!-- YENİ BESLENME MAKALESİ BİTİŞİ -->
                 <!-- 1. MAKALE BAŞLANGICI -->
                 <article class="article-preview">
                     <h3><a href="makale-hafiza-nasil-guclenir.html">Unutkanlığa Karşı Hafızanızı Güçlendirmenin 5 Bilimsel Yolu</a></h3>
