--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
                 <!-- YENİ BESLENME MAKALESİ BAŞLANGICI -->
                 <article class="article-preview">
                     <h3><a href="beslenme-bilissel-etkiler.html">Beyin Gücünüzü Artırın: Beslenmenin Bilişsel Fonksiyonlara Etkisi</a></h3>
-                    <p class="article-meta">Yayınlanma Tarihi: [Makaleyi yazdığınız tarihi ekleyin]</p>
+                    <p class="article-meta">Yayınlanma Tarihi: 10.07.2025 </p>
                     <p class="article-excerpt">Tükettiğimiz besinlerin hafıza, dikkat ve öğrenme gibi bilişsel fonksiyonlarımız üzerinde doğrudan bir etkiye sahip olduğunu biliyor muydunuz? Beyninizi en iyi şekilde beslemenin bilimsel yollarını keşfedin.</p>
                     <a href="beslenme-bilissel-etkiler.html" class="read-more">Devamını Oku →</a>
                 </article>
@@ -48,7 +48,7 @@
                 <!-- 1. MAKALE BAŞLANGICI -->
                 <article class="article-preview">
                     <h3><a href="makale-hafiza-nasil-guclenir.html">Unutkanlığa Karşı Hafızanızı Güçlendirmenin 5 Bilimsel Yolu</a></h3>
-                    <p class="article-meta">Yayınlanma Tarihi: 15 Ekim 2023</p>
+                    <p class="article-meta">Yayınlanma Tarihi: 15 Şubat 2025</p>
                     <p class="article-excerpt">Günlük hayatta sıkça yaşadığımız unutkanlık aslında yönetilebilir bir durumdur. Bu yazıda, nörobilimin ışığında hafızanızı daha keskin hale getirecek, uygulaması kolay 5 yöntemi inceliyoruz...</p>
                     <a href="makale-hafiza-nasil-guclenir.html" class="read-more">Devamını Oku →</a>
                 </article>
@@ -71,7 +71,7 @@
 
     <!-- Sitemizin her sayfasında aynı olan alt bilgi bölümü -->
     <footer>
-        <p>© 2023 - Deep Brain. Tüm hakları saklıdır.</p>
+        <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
     </footer>
 
 </body>
