--- a/tr/index.html
+++ b/tr/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DEEP BRAİN: Nörolog Destekli Zihin ve Beyin Egzersizleri</title>
-    <meta name="description" content="Nöroloji doktoru rehberliğinde hazırlanan ücretsiz zihin egzersizleri ile hafıza, dikkat ve problem çözme becerilerinizi geliştirin. Bilimsel temelli oyunlarla beyninizi formda tutun.">
+    <meta name="description" content="...">
     
-    <!-- Favicon Linkleri -->
+    <!-- Linkler ana dizinden (root) çağrılmalı -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <header>
         <h1>DEEP BRAİN</h1>
         <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
         <nav class="main-nav">
-            <a href="index.html">Ana Sayfa</a>
-            <a href="blog.html">Blog</a>
-            <a href="hakkimda.html">Hakkımda</a>
+            <!-- Linkler artık /tr/ klasörüne göre ayarlandı -->
+            <a href="/tr/index.html">Ana Sayfa</a>
+            <a href="/tr/blog.html">Blog</a>
+            <a href="/tr/hakkimda.html">Hakkımda</a>
         </nav>
     </header>
 
@@ -33,6 +33,7 @@
         <div id="selection-screen">
             <h2>Hangi Becerinizi Geliştirmek İstersiniz?</h2>
             <div class="game-selection-container">
+                 <!-- Bu butonlar JavaScript ile yönetildiği için yollarını değiştirmeye gerek yok -->
                 <button class="game-choice" data-game="adam-asmaca">Adam Asmaca (Dil Becerisi)</button>
                 <button class="game-choice" data-game="sirali-hatirlama">Sıralı Hatırlama (Hafıza)</button>
                 <button class="game-choice" data-game="stroop-testi">Stroop Testi (Dikkat)</button>
@@ -40,19 +41,15 @@
                 <button class="game-choice" data-game="n-back">N-Back Testi (Çalışma Belleği)</button>
             </div>
         </div>
-
         <div id="game-container" class="hidden">
-            <div id="game-content">
-                <!-- Oyun içeriği buraya JavaScript ile eklenecek -->
-            </div>
+            <div id="game-content"></div>
             <button id="back-to-menu">Ana Menüye Dön</button>
         </div>
     </main>
-
     <footer>
         <p>© 2025 - Deep Brain. Tüm hakları saklıdır.</p>
     </footer>
-
-    <script src="script.js"></script>
+    <!-- Script dosyası da ana dizinden çağrılmalı -->
+    <script src="/script.js"></script>
 </body>
 </html>
