--- a/tr/stroop-testi-bilimi.html
+++ b/tr/stroop-testi-bilimi.html
@@ -6,13 +6,13 @@
     <title>Stroop Testi'nin Arkasındaki Bilim | DEEP BRAİN Blog</title>
     <meta name="description" content="Nörolog gözüyle Stroop Etkisi: Beynimiz çelişen bilgilerle nasıl başa çıkar? Seçici dikkat ve ketleme mekanizmalarını keşfedin.">
     
-    <!-- Favicon Linkleri -->
+    <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="/style.css">
 
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
@@ -23,9 +23,10 @@
         <h1>DEEP BRAİN</h1>
         <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
         <nav class="main-nav">
-            <a href="index.html">Ana Sayfa</a>
-            <a href="blog.html">Blog</a>
-            <a href="hakkimda.html">Hakkımda</a>
+            <!-- Düzeltilmiş Yollar -->
+            <a href="/tr/index.html">Ana Sayfa</a>
+            <a href="/tr/blog.html">Blog</a>
+            <a href="/tr/hakkimda.html">Hakkımda</a>
         </nav>
     </header>
 
@@ -34,36 +35,24 @@
             <article class="full-article">
                 <h1>Stroop Testi'nin Arkasındaki Bilim: Beynimiz Çelişkilerle Nasıl Başa Çıkar?</h1>
                 <p class="article-meta">Yazar: Abdulkadir Ermiş - Yayınlanma Tarihi: 30.06.2025 </p>
-
                 <p>Sitemizdeki oyunlardan biri olan Stroop Testi'ni denerken basit bir görevin ne kadar zorlayıcı olabildiğini fark etmişsinizdir. Mavi renkle yazılmış "KIRMIZI" kelimesini gördüğünüzde, beyniniz bir anlığına duraksar. İşte bu kısa duraksama, "Stroop Etkisi" olarak bilinir ve beynimizin en temel çalışma prensiplerinden bazıları hakkında bize paha biçilmez bilgiler sunar.</p>
-
                 <h2>Stroop Etkisi Nedir?</h2>
-                <p>
-                    <!-- BURAYI DOLDURUN: Stroop etkisini basitçe tanımlayın. Kelime okumanın ne kadar otomatik bir süreç olduğunu ve renk isimlendirmenin daha fazla bilişsel çaba gerektirdiğini anlatın. Bu iki sürecin çatışması (interference) olduğunu vurgulayın. -->
-                    Stroop Etkisi, en temel tanımıyla, bir kelimenin anlamı ile o kelimenin sunulduğu görsel özellik (örneğin renk) arasında bir çelişki olduğunda beynin tepki süresindeki gecikmedir. Okuma, yılların pratiğiyle beynimizde o kadar otomatikleşmiş bir süreçtir ki, onu bastırmak ve bunun yerine daha az otomatik olan renk isimlendirme görevine odaklanmak ciddi bir zihinsel efor gerektirir.Bu egzersizde beynimizin ön kısmındaki frontal lobumuzun görevlerinden olan istemli olarak okumayı inhibe ederken renk algısını ön planda tutmayı ve bunu her yeni soruda tekrar tekrar canlı tutmayı başarmış oluyoruz.
-                </p>
-
+                <p>Stroop Etkisi, en temel tanımıyla, bir kelimenin anlamı ile o kelimenin sunulduğu görsel özellik (örneğin renk) arasında bir çelişki olduğunda beynin tepki süresindeki gecikmedir. Okuma, yılların pratiğiyle beynimizde o kadar otomatikleşmiş bir süreçtir ki, onu bastırmak ve bunun yerine daha az otomatik olan renk isimlendirme görevine odaklanmak ciddi bir zihinsel efor gerektirir.Bu egzersizde beynimizin ön kısmındaki frontal lobumuzun görevlerinden olan istemli olarak okumayı inhibe ederken renk algısını ön planda tutmayı ve bunu her yeni soruda tekrar tekrar canlı tutmayı başarmış oluyoruz.</p>
                 <h2>Beyinde Neler Oluyor? İki Sistemin Savaşı</h2>
-                <p>
-                    <!-- BURAYI DOLDURUN: Beynin hangi bölgelerinin bu süreçte aktif olduğunu anlatın. Özellikle Anterior Singulat Korteks (ACC) ve Dorsolateral Prefrontal Korteks (DLPFC) gibi yürütücü işlevlerden sorumlu bölgelerin rolünü açıklayın. ACC'nin çatışmayı tespit ettiğini, DLPFC'nin ise doğru göreve odaklanmak için otomatik tepkiyi (kelimeyi okuma) bastırmaya (ketleme/inhibition) çalıştığını anlatın. -->
-                    Bu zihinsel savaş sırasında beynimizin prefrontal korteks adı verilen ön bölgesi harıl harıl çalışır. Fonksiyonel MR (fMRI) çalışmaları da bu akvite artışını bilimsel olarak kanıtlamıştır. İki kilit bölge ön plana çıkamaktadır:
+                <p>Bu zihinsel savaş sırasında beynimizin prefrontal korteks adı verilen ön bölgesi harıl harıl çalışır. Fonksiyonel MR (fMRI) çalışmaları da bu akvite artışını bilimsel olarak kanıtlamıştır. İki kilit bölge ön plana çıkamaktadır:
                     <ul>
                         <li><strong>Anterior Singulat Korteks (ACC):</strong> Beynin "alarm sistemi" olarak düşünebiliriz. ACC, kelimenin anlamı ile rengi arasındaki çelişkiyi fark eder ve "Burada bir sorun var!" sinyali gönderir.</li>
                         <li><strong>Dorsolateral Prefrontal Korteks (DLPFC):</strong> Bu bölge ise "genel müdür" gibidir. ACC'den gelen uyarı üzerine devreye girer, asıl hedefin rengi söylemek olduğunu hatırlar ve otomatik olan okuma dürtüsünü aktif olarak bastırır. Bu sürece 'bilişsel ketleme' (cognitive inhibition) adı verilir.</li>
                     </ul>
                 </p>
-
                 <h2>Bu Test Neden Önemli?</h2>
-                <p>
-                    <!-- BURAYI DOLDURUN: Stroop Testi'nin neden sadece bir oyun olmadığını, klinik ve bilimsel önemini anlatın. DEHB (Dikkat Eksikliği ve Hiperaktivite Bozukluğu), demans, travmatik beyin hasarı gibi durumlarda yürütücü işlevlerin nasıl etkilendiğini ve bu testin bu durumları değerlendirmede nasıl bir araç olarak kullanıldığını belirtin. -->
-                    Stroop Testi, dikkatimizi odaklama, gereksiz bilgiyi filtreleme ve anlık dürtüleri kontrol etme yeteneğimiz olan yürütücü işlevlerin sağlığını ölçmek ve geliştirmek için güçlü bir araçtır. Bu nedenle nöropsikolojik değerlendirmelerde sıkça kullanılır. Örneğin, Dikkat Eksikliği ve Hiperaktivite Bozukluğu (DEHB) olan bireyler, ketleme mekanizmasındaki zorluklar nedeniyle bu testte daha düşük performans gösterebilirler.
-                </p>
-
+                <p>Stroop Testi, dikkatimizi odaklama, gereksiz bilgiyi filtreleme ve anlık dürtüleri kontrol etme yeteneğimiz olan yürütücü işlevlerin sağlığını ölçmek ve geliştirmek için güçlü bir araçtır. Bu nedenle nöropsikolojik değerlendirmelerde sıkça kullanılır. Örneğin, Dikkat Eksikliği ve Hiperaktivite Bozukluğu (DEHB) olan bireyler, ketleme mekanizmasındaki zorluklar nedeniyle bu testte daha düşük performans gösterebilirler.</p>
                 <h3>Sonuç</h3>
                 <p>Kısacası, bir dahaki sefere Stroop Testi'ni oynarken yaşadığınız o kısa anlık zorlanma, beyninizin en gelişmiş bölgelerinin ne kadar karmaşık ve muhteşem bir iş çıkardığının bir kanıtıdır. Bu basit egzersizle, beyninizin dikkat ve odaklanma kaslarını aktif olarak çalıştırmış olursunuz.</p>
             </article>
 
-            <a href="blog.html" class="back-to-home-link" style="background-color: #3498db; text-align:center;">← Tüm Makalelere Geri Dön</a>
+            <!-- Düzeltilmiş Blog Sayfası Linki -->
+            <a href="/tr/blog.html" class="back-to-home-link" style="background-color: #3498db; text-align:center;">← Tüm Makalelere Geri Dön</a>
         </div>
     </main>
     
