--- a/en/about.html
+++ b/en/about.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About- DEEP BRAİN</title>
+    <meta name="description" content="Learn about the founder of the DEEP BRAIN project. Our mission and vision as a neurologist.">
+    
+    <!-- Düzeltilmiş Yollar -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="/style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+    <header>
+        <h1>DEEP BRAİN</h1>
+        <p>Mental Exercises Under the Guidance of a Neurologist</p>
+        <nav class="main-nav">
+            <!-- Düzeltilmiş Yollar -->
+            <a href="/en/index.html">Home page</a>
+            <a href="/en/blog.html">Blog</a>
+            <a href="/en/about.html">About</a>
+        </nav>
+    </header>
+
+    <main>
+        <div class="page-container">
+            <article class="full-article">
+                <h1>About Me</h1>
+                <p>"Hello, I am Dr. Abdulkadir Ermiş. I completed my specialization as a research assistant in the field of neurology at Istanbul Medipol University, Faculty of Medicine, Department of Neurology. I work especially on neuroimmunology and neurodegenerative diseases such as Multiple Sclerosis and Alzheimer's Disease."</p>
+                <h2>My Mission</h2>
+                <p>"In my clinical practice and research, I observe the profound impact of cognitive health on overall quality of life through our patients every day. I launched the DEEP BRAIN project to help people proactively protect their brain health by bringing scientifically based and accessible mind exercises to a wider audience."</p>
+                <h2>My Vision</h2>
+                <p>"My goal is to develop and protect cognitive functions instead of lazy minds and limited neuronal reserve with DEEP BRAIN, not just as a gaming platform. "To make it a scientifically based platform that anyone who wants to can use."</p>
+            </article>
+
+            <!-- Düzeltilmiş Ana Sayfa Linki -->
+            <a href="/en/index.html" class="back-to-home-link">Back to Exercises</a>
+        </div>
+    </main>
+    
+    <footer>
+        <p>© 2025 - Deep Brain. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
