--- a/en/nutrition-cognitive-effects.html
+++ b/en/nutrition-cognitive-effects.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boost Your Brain Power: The Effect of Nutrition on Cognitive Functions</title>
+    <meta name="description" content="A nutrition guide for brain health from a neurologist's perspective. Discover foods that strengthen memory and attention with scientific evidence such as omega-3, flavonoids, and the Mediterranean diet.">
+    
+    <!-- Düzeltilmiş Yollar -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="/style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+    <header>
+        <h1>DEEP BRAİN</h1>
+        <p>Mental Exercises Under the Guidance of a Neurologist</p>
+        <nav class="main-nav">
+            <!-- Düzeltilmiş Yollar -->
+            <a href="/tr/index.html">Home Page</a>
+            <a href="/tr/blog.html">Blog</a>
+            <a href="/tr/about.html">About</a>
+        </nav>
+    </header>
+
+    <main>
+        <div class="page-container">
+            <article class="full-article">
+                <h1>Boost Your Brain Power: The Effect of Nutrition on Cognitive Functions</h1>
+                <p class="article-meta">Author: Abdulkadir Ermiş, MD - Publication Date: 10.07.2025</p>
+                <p>It is our common goal to keep our mental performance at the highest level in the intense tempo of modern life. Well, did you know that the saying "we are what we eat" also applies to our brains? Neurological research shows that the foods we consume have a direct and powerful effect on our cognitive functions such as memory, attention, and learning. In this article, we will examine the scientific ways to best nourish your brain.</p>
+                <h2>Super Fuels for the Brain: Macro and Micronutrients</h2
+                <p>Although our brain makes up only 2% of our body weight, it consumes approximately 20% of our energy on its own. It needs the right fuels to meet this high energy need and keep the communication between neurons healthy.</p>
+                <h3>1. Omega-3 Fatty Acids: The Building Blocks of Neurons</h3>
+                <p>In addition to being important in neuron cell membranes, DHA and EPA are also known to support synaptic plasticity and have anti-inflammatory effects. Plant sources: Oily fish such as salmon and mackerel, walnuts, flaxseed. DHA (Docosahexaenoic acid), in particular, is a basic component of brain cell membranes. Adequate Omega-3 intake makes communication between neurons fluent and supports learning and memory processes. Studies show that regular Omega-3 consumption can reduce the risk of age-related cognitive decline.</p>
+                <h3>2. Flavonoids and Antioxidants: Protective Shields of the Brain</h3>
+                <p>The importance of the damage caused by oxidative stress to brain cells and its role in the aging process is increasing. It is known that flavonoids (such as anthocyanins) prevent this damage and improve blood flow. Plant Sources: Berries such as blueberries, blackberries, dark chocolate, green tea, turmeric (curcumin). Metabolic processes in our bodies produce harmful molecules called "free radicals." The accumulation of these molecules can cause oxidative stress and damage neurons. Flavonoids and other antioxidants found in abundance in foods such as blueberries, dark chocolate, and green tea protect the brain from damage by neutralizing these free radicals.</p>
+                <h3>3. B Vitamins (B6, B9, B12): Homocysteine ​​Enemy</h3>
+                <p>High levels of the amino acid homocysteine ​​are known to be associated with cognitive decline and the risk of dementia. The role of B vitamins in reducing these levels and is also important in neurotransmitter synthesis. Plant Sources: Green leafy vegetables (folate - B9), meat, eggs, dairy products (B12). B vitamins are critical for brain health. Vitamins B6, B9 (folate) and B12 in particular help regulate homocysteine ​​levels in the blood, which are considered a risk factor for dementia. Their deficiency can cause memory problems and concentration difficulties.</p>
+                <h2>MIND and the Mediterranean Diet: Scientifically Proven Models</h2>
+                <p>More important than individual nutrients is the overall nutritional regime. Two dietary models stand out in this regard:</p>
+                    <li><strong>Mediterranean Diet:</strong> This nutritional model, rich in olive oil, fish, vegetables, fruits, whole grains, and nuts, is very effective in protecting brain health as well as heart health.</li>
+                    <li><strong>MIND Diet:</strong> The MIND (Mediterranean-DASH Intervention for Neurodegenerative Delay) diet, which is a combination of the Mediterranean and DASH diets, specifically targets brain health. It emphasizes the consumption of green leafy vegetables and 'berry' type fruits. Large-scale studies have shown that the risk of Alzheimer's disease is significantly reduced in individuals who strictly follow the MIND diet.</li>
+                </ul>
+                <h3>Result</h3>
+                <p>Our brain health depends largely on our lifestyle choices, as well as genetic factors. Adopting a balanced and rich diet is one of the most powerful steps we can take to protect our cognitive functions and slow down age-related mental decline. Remember, every investment you make in your brain is an investment in your future quality of life.</p>
+            </article>
+
+            <!-- Düzeltilmiş Blog Sayfası Linki -->
+            <a href="/en/blog.html" class="back-to-home-link" style="background-color: #3498db; text-align:center;">← Return to All Articles</a>
+        </div>
+    </main>
+    
+    <footer>
+        <p>© 2025 - Deep Brain. All rights reserved.</p>
+    </footer>
+
+</body>
+</html>
