--- a/en/blog.html
+++ b/en/blog.html
@@ -45,7 +45,7 @@
                 </article>
                 <article class="article-preview">
                     <h3><a href="/en/article-how-to-strengthen-memory.html">5 Scientific Ways to Strengthen Your Memory Against Forgetfulness</a></h3>
-                    <p class="article-meta">Publication Date: 15 Şubat 2025</p>
+                    <p class="article-meta">Publication Date: 15.02.2025</p>
                     <p class="article-excerpt">Forgetfulness, which we often experience in daily life, is actually a manageable situation. In this article, we examine 5 easy-to-apply methods that will make your memory sharper in the light of neuroscience...</p>
                     <a href="/en/article-how-to-strengthen-memory.html" class="read-more">Continue Reading →</a>
                 </article>
