--- a/en/blog.html
+++ b/en/blog.html
@@ -24,9 +24,9 @@
         <p>Mental Exercises Under the Guidance of a Neurologist</p>
         <nav class="main-nav">
             <!-- Düzeltilmiş Yollar -->
-            <a href="/tr/index.html">Home Page</a>
-            <a href="/tr/blog.html">Blog</a>
-            <a href="/tr/about.html">About</a>
+            <a href="/en/index.html">Home Page</a>
+            <a href="/en/blog.html">Blog</a>
+            <a href="/en/about.html">About</a>
         </nav>
     </header>
 
@@ -41,13 +41,13 @@
                     <h3><a href="/en/nutritional-cognitive-effects.html">Boost Your Brain Power: Nutrition's Effect on Cognitive Functions</a></h3>
                     <p class="article-meta">Publication Date: 10.07.2025</p>
                     <p class="article-excerpt">Did you know that the foods we consume have a direct impact on our cognitive functions, such as memory, attention, and learning? Discover scientific ways to best nourish your brain.</p>
-                    <a href="/tr/beslenme-bilissel-etkiler.html" class="read-more">Continue Reading →</a>
+                    <a href="/en/nutritional-cognitive-effects.html" class="read-more">Continue Reading →</a>
                 </article>
                 <article class="article-preview">
-                    <h3><a href="/en/article-how-to-strengthen-memory.html">5 Scientific Ways to Strengthen Your Memory Against Forgetfulness</a></h3>
+                    <h3><a href="/en/article-memory-how-to-strengthen.html">5 Scientific Ways to Strengthen Your Memory Against Forgetfulness</a></h3>
                     <p class="article-meta">Publication Date: 15.02.2025</p>
                     <p class="article-excerpt">Forgetfulness, which we often experience in daily life, is actually a manageable situation. In this article, we examine 5 easy-to-apply methods that will make your memory sharper in the light of neuroscience...</p>
-                    <a href="/en/article-how-to-strengthen-memory.html" class="read-more">Continue Reading →</a>
+                    <a href="/en/article-memory-how-to-strengthen..html" class="read-more">Continue Reading →</a>
                 </article>
                 <article class="article-preview">
                     <h3><a href="/en/stroop-test-science.html">The Science Behind the Stroop Test: How Does Our Brain Deal with Contradictions?</a></h3>
