--- a/en/article-memory-how-to-strengthen.html
+++ b/en/article-memory-how-to-strengthen.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hafızanızı Güçlendirmenin 5 Bilimsel Yolu | DEEP BRAİN Blog</title>
-    <meta name="description" content="Nörolog gözüyle unutkanlığa karşı etkili ve bilimsel olarak kanıtlanmış 5 hafıza güçlendirme tekniğini öğrenin. Beyin sağlığınızı bugün iyileştirin.">
+    <title>5 Scientific Ways to Strengthen Your Memory | DEEP BRAİN Blog</title>
+    <meta name="description" content="Learn 5 effective and scientifically proven memory strengthening techniques against forgetfulness from a neurologist's perspective. Improve your brain health today.">
     
     <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -21,37 +21,37 @@
 
     <header>
         <h1>DEEP BRAİN</h1>
-        <p>Bir Nöroloji Doktoru Rehberliğinde Zihin Egzersizleri</p>
+        <p>Mind Exercises Under the Guidance of a Neurologist</p>
         <nav class="main-nav">
             <!-- Düzeltilmiş Yollar -->
-            <a href="/tr/index.html">Ana Sayfa</a>
-            <a href="/tr/blog.html">Blog</a>
-            <a href="/tr/hakkimda.html">Hakkımda</a>
+            <a href="/en/index.html">Home Page</a>
+            <a href="/en/blog.html">Blog</a>
+            <a href="/en/about.html">About</a>
         </nav>
     </header>
 
     <main>
         <div class="page-container">
             <article class="full-article">
-                <h1>Unutkanlığa Karşı Hafızanızı Güçlendirmenin 5 Bilimsel Yolu</h1>
-                <p class="article-meta">Yazar: Uzm. Dr. Abdulkadir Ermiş - Yayınlanma Tarihi: 10 Haziran 2025</p>
-                <img src="httpsis.com/v8tAm.jpg" alt="Beyin ve hafıza illüstrasyonu" style="width:100%; border-radius:10px; margin: 20px 0;">
-                <h2>1. Yeterli ve Kaliteli Uyku</h2>
-                <p>Uyku, beynin kendini yeniden organize ettiği ve gün içinde öğrenilen bilgileri kalıcı hafızaya aktardığı kritik bir süreçtir. Özellikle derin uyku ve REM evrelerinde beynimizin glimfatik sistemi dediğimiz atık maddelerinin temizlendiği sistem çok daha aktif şekilde çalışmaktadır</p>
-                <h2>2. Düzenli Fiziksel Egzersiz</h2>
-                <p>"Sağlam kafa sağlam vücutta bulunur" sözü bilimsel olarak da doğrudur. Düzenli yapılan aerobik egzersizler, beyne giden kan ve oksijen miktarını artırarak beynin beslenme ve işleyişine pozitif katkı sağlamaktadır. Ayrıca her fiziksel egzersiz ve spor beynimize de sürekli uyarı göndererek onun canlı kalmasına katkı sağlar.</p>
-                <h2>3. Zihinsel Olarak Aktif Kalmak</h2>
-                <p>Tıpkı kaslarımız gibi, beynimiz de zorlandıkça gelişir. Yeni ve karmaşık bilgilerle beyni meşgul etmek, nöronlar arasında yeni yollar (sinaptik bağlantılar) oluşturur. Bu da bilişsel rezervinizi artırır.</p>
-                <h2>4. Stres Yönetimi ve Mindfulness</h2>
-                <p>Yoğun stres altında salgılanan kortizol hormonu, beynin hafıza merkezi olan hipokampüsteki hücrelere zarar verebilir. Bu nedenle stresi yönetmeyi öğrenmek, sadece ruh sağlığı için değil, beyin sağlığı için de hayati önem taşır.</p>
-                <h2>5. Beyin Dostu Beslenme</h2>
-                <p>Yediklerimiz, beynimizin yakıtıdır. Özellikle Omega-3 yağ asitleri, flavonoidler ve antioksidanlar açısından zengin bir beslenme düzeni, beyin hücrelerimizi korur ve bilişsel gerilemeyi yavaşlatabilir...</p>
-                <h3>Sonuç</h3>
-                <p>Görüldüğü gibi, hafızayı güçlendirmek sihirli bir formül gerektirmiyor. Yaşam tarzımızda yapacağımız bu bilimsel temelli küçük değişiklikler, uzun vadede beyin sağlığımız için büyük farklar yaratabilir. Unutmayın, beyninize yaptığınız her yatırım, kendinize yapacağınız en değerli yatırımdır.</p>
+<h1>5 Scientific Ways to Strengthen Your Memory Against Forgetfulness</h1>
+<p class="article-meta">Author: Expert Dr. Abdulkadir Ermiş - Publication Date: June 10, 2025</p>
+<img src="httpssis.com/v8tAm.jpg" alt="Brain and memory illustration" style="width:100%; border-radius:10px; margin: 20px 0;">
+<h2>1. Sufficient and Quality Sleep</h2>
+<p>Sleep is a critical process in which the brain reorganizes itself and transfers the information learned during the day to permanent memory. Especially in the deep sleep and REM stages, the system in our brain called the glymphatic system, which cleans waste materials, works much more actively</p>
+<h2>2. Regular Physical Exercise</h2>
+<p>The saying "A healthy mind is in a healthy body" is also scientifically true. Regular aerobic exercises increase the amount of blood and oxygen going to the brain, making a positive contribution to the nutrition and functioning of the brain. In addition, every physical exercise and sport contributes to the vitality of our brain by constantly sending a stimulus to it.</p>
+<h2>3. Staying Mentally Active</h2>
+<p>Just like our muscles, our brain develops as it is challenged. Keeping the brain busy with new and complex information creates new pathways (synaptic connections) between neurons. This increases your cognitive reserve.</p>
+<h2>4. Stress Management and Mindfulness</h2>
+<p>The cortisol hormone secreted under intense stress can damage the cells in the hippocampus, the brain's memory center. Therefore, learning to manage stress is vital not only for mental health but also for brain health.</p>
+<h2>5. Brain-Friendly Nutrition</h2>
+<p>What we eat is the fuel of our brain. A diet rich in Omega-3 fatty acids, flavonoids and antioxidants protects our brain cells and can slow down cognitive decline...</p>
+<h3>Conclusion</h3>
+<p>As can be seen, strengthening memory does not require a magic formula. These scientifically based small changes in our lifestyle can make big differences for our brain health in the long term. Remember, every investment you make in your brain is the most valuable investment you can make in yourself.</p>
             </article>
 
             <!-- Düzeltilmiş Blog Sayfası Linki -->
-            <a href="/tr/blog.html" class="back-to-home-link" style="background-color: #3498db; text-align:center;">← Tüm Makalelere Geri Dön</a>
+            <a href="/en/blog.html" class="back-to-home-link" style="background-color: #3498db; text-align:center;">← Tüm Makalelere Geri Dön</a>
         </div>
     </main>
     
