--- a/en/article-memory-how-to-strengthen.html
+++ b/en/article-memory-how-to-strengthen.html
@@ -33,25 +33,25 @@
     <main>
         <div class="page-container">
             <article class="full-article">
-<h1>5 Scientific Ways to Strengthen Your Memory Against Forgetfulness</h1>
-<p class="article-meta">Author: Expert Dr. Abdulkadir Ermiş - Publication Date: June 10, 2025</p>
-<img src="httpssis.com/v8tAm.jpg" alt="Brain and memory illustration" style="width:100%; border-radius:10px; margin: 20px 0;">
-<h2>1. Sufficient and Quality Sleep</h2>
-<p>Sleep is a critical process in which the brain reorganizes itself and transfers the information learned during the day to permanent memory. Especially in the deep sleep and REM stages, the system in our brain called the glymphatic system, which cleans waste materials, works much more actively</p>
-<h2>2. Regular Physical Exercise</h2>
-<p>The saying "A healthy mind is in a healthy body" is also scientifically true. Regular aerobic exercises increase the amount of blood and oxygen going to the brain, making a positive contribution to the nutrition and functioning of the brain. In addition, every physical exercise and sport contributes to the vitality of our brain by constantly sending a stimulus to it.</p>
-<h2>3. Staying Mentally Active</h2>
-<p>Just like our muscles, our brain develops as it is challenged. Keeping the brain busy with new and complex information creates new pathways (synaptic connections) between neurons. This increases your cognitive reserve.</p>
-<h2>4. Stress Management and Mindfulness</h2>
-<p>The cortisol hormone secreted under intense stress can damage the cells in the hippocampus, the brain's memory center. Therefore, learning to manage stress is vital not only for mental health but also for brain health.</p>
-<h2>5. Brain-Friendly Nutrition</h2>
-<p>What we eat is the fuel of our brain. A diet rich in Omega-3 fatty acids, flavonoids and antioxidants protects our brain cells and can slow down cognitive decline...</p>
-<h3>Conclusion</h3>
-<p>As can be seen, strengthening memory does not require a magic formula. These scientifically based small changes in our lifestyle can make big differences for our brain health in the long term. Remember, every investment you make in your brain is the most valuable investment you can make in yourself.</p>
+                <h1>5 Scientific Ways to Strengthen Your Memory Against Forgetfulness</h1>
+                <p class="article-meta">Author: Expert Dr. Abdulkadir Ermiş - Publication Date: June 10, 2025</p>
+                <img src="httpssis.com/v8tAm.jpg" alt="Brain and memory illustration" style="width:100%; border-radius:10px; margin: 20px 0;">
+                <h2>1. Sufficient and Quality Sleep</h2>
+                <p>Sleep is a critical process in which the brain reorganizes itself and transfers the information learned during the day to permanent memory. Especially in the deep sleep and REM stages, the system in our brain called the glymphatic system, which cleans waste materials, works much more actively</p>
+                <h2>2. Regular Physical Exercise</h2>
+                <p>The saying "A healthy mind is in a healthy body" is also scientifically true. Regular aerobic exercises increase the amount of blood and oxygen going to the brain, making a positive contribution to the nutrition and functioning of the brain. In addition, every physical exercise and sport contributes to the vitality of our brain by constantly sending a stimulus to it.</p>
+                <h2>3. Staying Mentally Active</h2>
+                <p>Just like our muscles, our brain develops as it is challenged. Keeping the brain busy with new and complex information creates new pathways (synaptic connections) between neurons. This increases your cognitive reserve.</p>
+                <h2>4. Stress Management and Mindfulness</h2>
+                <p>The cortisol hormone secreted under intense stress can damage the cells in the hippocampus, the brain's memory center. Therefore, learning to manage stress is vital not only for mental health but also for brain health.</p>
+                <h2>5. Brain-Friendly Nutrition</h2>
+                <p>What we eat is the fuel of our brain. A diet rich in Omega-3 fatty acids, flavonoids and antioxidants protects our brain cells and can slow down cognitive decline...</p>
+                <h3>Conclusion</h3>
+                <p>As can be seen, strengthening memory does not require a magic formula. These scientifically based small changes in our lifestyle can make big differences for our brain health in the long term. Remember, every investment you make in your brain is the most valuable investment you can make in yourself.</p>
             </article>
 
             <!-- Düzeltilmiş Blog Sayfası Linki -->
-            <a href="/en/blog.html" class="back-to-home-link" style="background-color: #3498db; text-align:center;">← Tüm Makalelere Geri Dön</a>
+            <a href="/en/blog.html" class="back-to-home-link" style="background-color: #3498db; text-align:center;">← Return to All Articles</a>
         </div>
     </main>
     
