--- a/en/nutrition-cognitive-effects.html
+++ b/en/nutrition-cognitive-effects.html
@@ -49,7 +49,7 @@
                     <li><strong>Mediterranean Diet:</strong> This nutritional model, rich in olive oil, fish, vegetables, fruits, whole grains, and nuts, is very effective in protecting brain health as well as heart health.</li>
                     <li><strong>MIND Diet:</strong> The MIND (Mediterranean-DASH Intervention for Neurodegenerative Delay) diet, which is a combination of the Mediterranean and DASH diets, specifically targets brain health. It emphasizes the consumption of green leafy vegetables and 'berry' type fruits. Large-scale studies have shown that the risk of Alzheimer's disease is significantly reduced in individuals who strictly follow the MIND diet.</li>
                 </ul>
-                <h3>Result</h3>
+                <h3>Conclusion</h3>
                 <p>Our brain health depends largely on our lifestyle choices, as well as genetic factors. Adopting a balanced and rich diet is one of the most powerful steps we can take to protect our cognitive functions and slow down age-related mental decline. Remember, every investment you make in your brain is an investment in your future quality of life.</p>
             </article>
 
