--- a/en/article-memory-how-to-strengthen.html
+++ b/en/article-memory-how-to-strengthen.html
@@ -34,7 +34,7 @@
         <div class="page-container">
             <article class="full-article">
                 <h1>5 Scientific Ways to Strengthen Your Memory Against Forgetfulness</h1>
-                <p class="article-meta">Author: Expert Dr. Abdulkadir Ermiş - Publication Date: June 10, 2025</p>
+                <p class="article-meta">Author: Abdulkadir Ermiş, MD - Publication Date: June 10, 2025</p>
                 <img src="httpssis.com/v8tAm.jpg" alt="Brain and memory illustration" style="width:100%; border-radius:10px; margin: 20px 0;">
                 <h2>1. Sufficient and Quality Sleep</h2>
                 <p>Sleep is a critical process in which the brain reorganizes itself and transfers the information learned during the day to permanent memory. Especially in the deep sleep and REM stages, the system in our brain called the glymphatic system, which cleans waste materials, works much more actively</p>
