--- a/en/nutrition-cognitive-effects.html
+++ b/en/nutrition-cognitive-effects.html
@@ -34,7 +34,7 @@
         <div class="page-container">
             <article class="full-article">
                 <h1>Boost Your Brain Power: The Effect of Nutrition on Cognitive Functions</h1>
-                <p class="article-meta">Author: Abdulkadir Ermiş, MD - Publication Date: 10.07.2025</p>
+                <p class="article-meta">Author: Abdulkadir Ermiş, MD, Neurologist - Publication Date: 10.07.2025</p>
                 <p>It is our common goal to keep our mental performance at the highest level in the intense tempo of modern life. Well, did you know that the saying "we are what we eat" also applies to our brains? Neurological research shows that the foods we consume have a direct and powerful effect on our cognitive functions such as memory, attention, and learning. In this article, we will examine the scientific ways to best nourish your brain.</p>
                 <h2>Super Fuels for the Brain: Macro and Micronutrients</h2
                 <p>Although our brain makes up only 2% of our body weight, it consumes approximately 20% of our energy on its own. It needs the right fuels to meet this high energy need and keep the communication between neurons healthy.</p>
