--- a/en/stroop-test-science.html
+++ b/en/stroop-test-science.html
@@ -34,7 +34,7 @@
         <div class="page-container">
             <article class="full-article">
               <h1>The Science Behind the Stroop Test: How Our Brains Deal with Contradictions</h1>
-              <p class="article-meta">Author: Abdulkadir Ermiş - Published Date: 06/30/2025 </p>
+              <p class="article-meta">Author: Abdulkadir Ermiş, MD, Neurologist - Published Date: 30.06.2025 </p>
               <p>While trying out one of our games, the Stroop Test, you may have noticed how challenging a simple task can be. When you see the word "RED" written in blue, your brain pauses for a moment. This short pause is known as the "Stroop Effect" and provides us with invaluable information about some of the most basic working principles of our brain.</p>
               <h2>What is the Stroop Effect?</h2>
               <p>The Stroop Effect, in its most basic definition, is the delay in the brain's reaction time when there is a conflict between the meaning of a word and the visual feature (such as color) with which that word is presented. Reading has become such an automatic process in our brain through years of practice that suppressing it and focusing on the less automatic task of naming colors instead requires serious mental effort. In this exercise, we manage to keep color perception at the forefront while inhibiting reading, which is one of the tasks of our frontal lobe at the front of our brain, and to keep this alive again and again with each new question.</p>
