--- a/en/about.html
+++ b/en/about.html
@@ -24,7 +24,7 @@
         <p>Mental Exercises Under the Guidance of a Neurologist</p>
         <nav class="main-nav">
             <!-- Düzeltilmiş Yollar -->
-            <a href="/en/index.html">Home page</a>
+            <a href="/en/index.html">Home Page</a>
             <a href="/en/blog.html">Blog</a>
             <a href="/en/about.html">About</a>
         </nav>
