--- a/tr/index.html
+++ b/tr/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DEEP BRAİN: Nörolog Destekli Zihin ve Beyin Egzersizleri</title>
-    <meta name="description" content="...">
-    
+    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/index.html" />
+    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/index.html" />
+    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/tr/index.html" />
+    <meta name="description" content=".....">
     <!-- Linkler ana dizinden (root) çağrılmalı -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
