--- a/tr/index.html
+++ b/tr/index.html
@@ -7,7 +7,7 @@
     <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/index.html" />
     <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/index.html" />
     <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/tr/index.html" />
-    <meta name="description" content=".....">
+    <meta name="description" content=""Bilimsel temelli zihin egzersizleri ile bilişsel kapasitenizi arttırın! Nörolog rehberliğinde hazırlanan ücretsiz oyunlarla hafızanızı keskinleştirin, dikkatinizi toplayın ve zihinsel olarak formda kalın."">
     <!-- Linkler ana dizinden (root) çağrılmalı -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
