--- a/tr/hakkimda.html
+++ b/tr/hakkimda.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkımda - DEEP BRAİN</title>
     <meta name="description" content="DEEP BRAİN projesinin kurucusu hakkında bilgi edinin. Nöroloji uzmanı olarak misyonumuz ve vizyonumuz.">
-    
+    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/hakkimda.html" />
+    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/about.html" /> <!-- İngilizce adı "about.html" olduğu için burası önemli -->
+    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/tr/hakkimda.html" />
     <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
