--- a/tr/beslenme-bilissel-etkiler.html
+++ b/tr/beslenme-bilissel-etkiler.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beyin Gücünüzü Artırın: Beslenmenin Bilişsel Fonksiyonlara Etkisi</title>
     <meta name="description" content="Nörolog gözüyle beyin sağlığı için beslenme rehberi. Omega-3, flavonoidler, Akdeniz diyeti gibi bilimsel kanıtlarla hafıza ve dikkati güçlendiren besinleri keşfedin.">
-    
+    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/beslenme-bilissel-etkiler.html" />
+    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/nutrition-cognitive-effects.html" />
+    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/tr/beslenme-bilissel-etkiler.html" />
     <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
