--- a/tr/makale-hafiza-nasil-guclenir.html
+++ b/tr/makale-hafiza-nasil-guclenir.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hafızanızı Güçlendirmenin 5 Bilimsel Yolu | DEEP BRAİN Blog</title>
     <meta name="description" content="Nörolog gözüyle unutkanlığa karşı etkili ve bilimsel olarak kanıtlanmış 5 hafıza güçlendirme tekniğini öğrenin. Beyin sağlığınızı bugün iyileştirin.">
-    
+    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/makale-hafiza-nasil-guclenir.html" />
+    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/article-memory-how-to-strengthen.html" /> 
+    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/tr/makale-hafiza-nasil-guclenir.html" />
     <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
