--- a/tr/stroop-testi-bilimi.html
+++ b/tr/stroop-testi-bilimi.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stroop Testi'nin Arkasındaki Bilim | DEEP BRAİN Blog</title>
     <meta name="description" content="Nörolog gözüyle Stroop Etkisi: Beynimiz çelişen bilgilerle nasıl başa çıkar? Seçici dikkat ve ketleme mekanizmalarını keşfedin.">
-    
+    <link rel="alternate" hreflang="tr" href="https://trainingbrain.github.io/tr/stroop-testi-bilimi.html" />
+    <link rel="alternate" hreflang="en" href="https://trainingbrain.github.io/en/stroop-test-science.html" />
+    <link rel="alternate" hreflang="x-default" href="https://trainingbrain.github.io/tr/stroop-testi-bilimi.html" />
     <!-- Düzeltilmiş Yollar -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
